[package]
name = "alt_enter"
version = "0.1.0"
authors = ["Zenthial <iamzenthial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
OriginalFilename = "alt_enter.exe"
FileDescription = "Disables the ROBLOX fullscreen FFlag"
ProductName = "Alt Enter Fix"
ProductVersion = "0.1.0"
LegalCopyright = "Copyright © 2021"